# hstr.rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  spam  spam2
.github/workflows/: build.yaml  ci.yaml
fake_ncurses/: Cargo.toml
fake_ncurses/src/: lib.rs
hstr/: Cargo.toml
hstr-rs/: Cargo.toml
hstr-rs/src/: app.rs  cli.rs  hstr.rs  io.rs  main.rs  sort.rs  state.rs  ui.rs  util.rs
hstr-rs/src/config/: bash  zsh
hstr/src/: app.rs  cli.rs  main.rs  sort.rs  ui.rs  util.rs
rl/: Cargo.toml
rl/src/: history_error.rs  lib.rs
src/: hstr.rs  io.rs  main.rs  sort.rs  state.rs  ui.rs
src/config/: bash  zsh
