[package]
name = "hstr-rs"
version = "0.12.1"
authors = ["xqb64 <x@nuked.one>"]
edition = "2018"
description = "History suggest box for bash and zsh"
license = "MIT"

[dependencies]
ncurses = { version = "5.99.0", features = ["wide"] }
libc = "0.2"
dirs = "2.0.2"
regex = "1"
gethostname = "0.2.1"
itertools = "0.9.0"
structopt = "0.3.21"
setenv = "0.1.2"
fuzzy-matcher = "0.3.7"
unicode-width = "0.1.8"

[dev-dependencies]
rstest = "0.6.4"
