[package]
name = "hstr-rs"
version = "0.9.0"
authors = ["xvm32 <xvm32@users.noreply.github.com>"]
edition = "2018"
description = "History suggest box for bash and zsh"
license = "MIT"

[dependencies]
ncurses = { version = "5.99.0", features = ["wide"] }
libc = "0.2"
dirs = "2.0.2"
regex = "1"
gethostname = "0.2.1"
itertools = "0.9.0"
clap = "2.33.0"
strum = "0.20.0"
strum_macros = "0.20.0"
structopt = "0.3.21"
setenv = "0.1.2"

[dev-dependencies]
rstest = "0.6.4"
fake_ncurses = { path = "../fake_ncurses" }
