[package]
name = "rl"
version = "0.1.0"
authors = ["xvm32 <xvm32@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
errno = "0.2.7"

[build-dependencies]
pkg-config = "~0.3.6"
vergen = "~0.1.0"